# nationify

./: Cargo.toml  README.md  build.rs
data/: countries.json  ports.json
src/: constants.rs  definitions.rs  lib.rs
src/tests/: mod.rs
