[package]
name = "nationify"
version = "0.1.2"
edition = "2021"
authors = ["Mohamad Al Zohbie <alzoubi528@gmail.com>"]
repository = "https://github.com/mohamadzoh/nationify"
description = "A library that provide information about countries"
maintainer = "Mohamad Al Zohbie"
license = "MIT"
keywords = ["locale", "iso", "iso-3166", "countrycode","region"]

[dependencies]
